Migrating to .NET 8